# VideoPlayerDesktop

./: .gitignore  CMakeLists.txt
include/: VideoReader.hpp
src/: VideoReader.cpp  main.cpp
